Přidána třída pro 2D kreslení
+ Drobné úpravy

--- a/Glib/Glib.csproj
+++ b/Glib/Glib.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Windows.Forms" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Draw2D.cs" />
     <Compile Include="GameTime.cs" />
     <Compile Include="GameTimeInfo.cs" />
     <Compile Include="GameWindow.cs" />
