--- a/Glib/packages.config
+++ b/Glib/packages.config
@@ -3,5 +3,6 @@
   <package id="SharpDX" version="2.4.2" targetFramework="net45" />
   <package id="SharpDX.Direct2D1" version="2.4.2" targetFramework="net45" />
   <package id="SharpDX.Direct3D9" version="2.4.2" targetFramework="net45" />
+  <package id="SharpDX.DirectInput" version="2.4.2" targetFramework="net40" />
   <package id="SharpDX.DXGI" version="2.4.2" targetFramework="net45" />
 </packages>
