--- a/WormsGame/WormsGame.csproj
+++ b/WormsGame/WormsGame.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{10B9DD78-6B80-4E3F-B4CB-6E8AFAE4F661}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>WormsGame</RootNamespace>
     <AssemblyName>WormsGame</AssemblyName>
