--- a/Glib/Glib.csproj
+++ b/Glib/Glib.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="SharpDX">
       <HintPath>..\packages\SharpDX.2.4.2\lib\net40\SharpDX.dll</HintPath>
@@ -59,6 +62,10 @@
     <Compile Include="GameWindow.cs" />
     <Compile Include="GameWindow2D.cs" />
     <Compile Include="GameWindowDx9.cs" />
+    <Compile Include="Native\W32Const.cs" />
+    <Compile Include="Native\W32.cs" />
+    <Compile Include="Native\W32Enum.cs" />
+    <Compile Include="Native\W32Struct.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WindowConfig.cs" />
   </ItemGroup>
