--- a/WormsGame/WormsGame.csproj
+++ b/WormsGame/WormsGame.csproj
@@ -66,7 +66,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="App.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WormsGameWindow.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
