--- a/Glib/packages.config
+++ b/Glib/packages.config
@@ -3,6 +3,7 @@
   <package id="SharpDX" version="2.4.2" targetFramework="net45" />
   <package id="SharpDX.D3DCompiler" version="2.4.2" targetFramework="net45" />
   <package id="SharpDX.Direct3D11" version="2.4.2" targetFramework="net45" />
+  <package id="SharpDX.DirectInput" version="2.4.2" targetFramework="net40" />
   <package id="SharpDX.DXGI" version="2.4.2" targetFramework="net45" />
   <package id="SharpDX.Toolkit" version="2.4.2" targetFramework="net45" />
   <package id="SharpDX.Toolkit.Game" version="2.4.2" targetFramework="net45" />
